--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 ---
 layout: default
 ---
+
 {% include hero.html %}
 
 <div class="container">
-	<div class="row">
-		<div class="col col-12">
-			{% if site.posts.size > 0 %}
-				<h4 class="lates-title">Latest Posts</h4>
-			{% endif %}
-		</div>
-	</div>
+  <div class="row">
+    <div class="col col-12">
+      <h4 class="aboutme-title">About Me</h4>
+      {% include aboutme.html %}
+    </div>
+  </div>
 </div>
 
 <div class="container">
-	<div class="row">
-	{% if site.posts.size > 0 %}
-		{% for post in paginator.posts %}
-			{% include article-content.html %}
-		{% endfor %}
-	{% endif %}
-	</div>
+  <div class="row">
+    <div class="col col-12">
+      {% if site.posts.size > 0 %}
+      <h4 class="lates-title">Latest Projects</h4>
+      {% endif %}
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    {% if site.posts.size > 0 %} {% for post in paginator.posts %} {% include
+    article-content.html %} {% endfor %} {% endif %}
+  </div>
 </div>
 {% include pagination.html %}
